<resources>
    <string name="app_name">CU Fit</string>


    <!-- Nav -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>

    <!-- User related -->
        <!-- Auth -->
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
        <!-- Fields -->
    <string name="first_name">First Name (Required)</string>
    <string name="last_name">Last Name (Required)</string>
    <string name="birth_date">Birth Date (Required)</string>
        <!-- Sexes -->
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
        <!-- Measurements -->

    <string name="current_weight">Current Weight (Optional)</string>
    <string name="current_height">Current Height (Optional)</string>
    <string name="weight_goal">Target Weight (Optional)</string>
        <!-- Card -->
    <string name="current">Current</string>
    <string name="goal">Goal</string>
    <string name="workouts">Workouts</string>
        <!-- Titles -->
    <string name="my_profile">My Profile</string>
    <string name="my_home">Home</string>
    <string name="my_progress">My Progress</string>



    <!-- Formatting -->
    <string name="date_format">%1$2d/%2$2d/%3$2d</string>


    <!-- Generic button text -->
    <string name="get_started_btn">Get Started</string>
    <string name="continue_btn">Continue</string>
    <string name="finished_btn">Finished</string>


    <!-- Welcome flow specific -->
    <string name="welcome_to">Welcome to</string>
    <string name="set_up_photo">First, let\'s setup a photo&#8230;</string>


    <!-- Shared element transition IDs -->
    <string name="tr_logo">logo</string>
    <string name="tr_credentials">credentials</string>
    <string name="tr_email_input">email_input</string>
    <string name="tr_password_input">password_input</string>
    <string name="tr_confirm_password_input">confirm_password_input</string>
    <string name="tr_action_btn">action_btn</string>
    <string name="tr_bottom_tray">bottom_tray</string>
    <string name="tr_switch_mode_btn">switch_mode_btn</string>
    <string name="tr_message">message</string>
    <string name="tr_top_text">top_text</string>
    <string name="tr_choose_photo_btn">choose_photo_btn</string>


</resources>