<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>

    <ImageView
        android:id="@+id/logo"
        android:transitionName="@string/tr_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="@dimen/LU_5_5"
        android:layout_marginVertical="@dimen/LU_3"
        android:src="@drawable/icon_text_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/credentials"/>

    <LinearLayout
        android:id="@+id/credentials"
        android:transitionName="@string/tr_credentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/LU_4_5"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_55"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_55">

        <com.portalpirates.cufit.ui.view.FitEditText
            android:id="@+id/email_input"
            android:transitionName="@string/tr_email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:nextFocusDown="@id/password_input"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"/>

        <com.portalpirates.cufit.ui.view.FitEditText
            android:id="@+id/password_input"
            android:transitionName="@string/tr_password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/LU_2"
            android:nextFocusUp="@id/email_input"
            android:nextFocusDown="@id/confirm_password_input"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"/>

        <com.portalpirates.cufit.ui.view.FitEditText
            android:id="@+id/confirm_password_input"
            android:transitionName="@string/tr_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/LU_2"
            app:editTextType="primary"
            android:nextFocusUp="@+id/password_input"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:hint="@string/confirm_password"/>

    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:transitionName="@string/tr_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/LU_1_5"
        android:textAppearance="@style/bold_body_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"

        android:maxLines="2"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:scrollHorizontally="true"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintBottom_toTopOf="@id/action_btn"
        app:layout_constraintLeft_toLeftOf="@id/credentials"
        app:layout_constraintRight_toRightOf="@id/credentials"
        app:layout_constraintTop_toBottomOf="@id/credentials"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"/>

    <com.portalpirates.cufit.ui.view.FitButton
        android:id="@+id/action_btn"
        android:transitionName="@string/tr_action_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/LU_4_5"
        android:layout_marginTop="@dimen/LU_2_5"
        app:buttonMode="inverted"
        app:buttonType="primary"
        app:layout_constraintBottom_toTopOf="@id/bottom_tray"
        app:layout_constraintLeft_toLeftOf="@id/credentials"
        app:layout_constraintRight_toRightOf="@id/credentials"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.0"
        app:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/bottom_tray"
        android:transitionName="@string/tr_bottom_tray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/LU_0_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.portalpirates.cufit.ui.view.FitButton
            android:id="@+id/switch_mode_btn"
            android:transitionName="@string/tr_switch_mode_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:buttonType="tertiary"
            app:text="@string/log_in"
            android:layout_weight="0.5"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>