<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/welcome_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <com.portalpirates.cufit.ui.view.ChooseImageButton
        android:id="@+id/choose_photo_btn"
        android:transitionName="@string/tr_choose_photo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="@dimen/LU_5_5"
        android:layout_marginVertical="@dimen/LU_5"
        app:layout_constraintLeft_toLeftOf="@id/inputs"
        app:layout_constraintRight_toRightOf="@id/inputs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputs"
        app:layout_constraintVertical_bias="1.0"/>

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/LU_4_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_50"
        app:layout_constraintBottom_toTopOf="@id/action_btn"
        app:layout_constraintVertical_bias="0.0">

    <com.portalpirates.cufit.ui.view.MeasuredEditText
        android:id="@+id/current_weight_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:nextFocusForward="@id/current_height_input"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:hint="@string/current_weight"/>

    <com.portalpirates.cufit.ui.view.MeasuredEditText
        android:id="@+id/current_height_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/LU_2"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:hint="@string/current_height"/>

    <com.portalpirates.cufit.ui.view.MeasuredEditText
        android:id="@+id/weight_goal_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/LU_2"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:hint="@string/weight_goal"/>

    </LinearLayout>

    <com.portalpirates.cufit.ui.view.FitButton
        android:id="@+id/action_btn"
        android:transitionName="@string/tr_action_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/LU_4_5"
        android:layout_marginVertical="@dimen/LU_4"
        app:buttonType="primary"
        app:text="@string/finished_btn"
        app:icon="@drawable/ic_arrow_right"
        app:iconOn="right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>